static/css/style.css
/* ... */
h1,
h2,
h3,
h4,
.navbar-brand,
.logo,
.movie-font,
.movie-image-continer, .title {
    font-family: "Bebas Neue", "sans-serif";
}

.container {
    display: flex;
    justify-content: center;
}

.generic-button {
    border-radius: 5px;
    background-color: #c4c4c4;
    font-weight: 600;
    max-width: 180px;
    width: 100%;
    box-sizing: border-box;
    margin: 0.5rem 4px;
    height: 40px;
    transition: 0.3s;
    border: 2px outset #c4c4c4;
}

.button {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1px 6px;
    text-align: center;
    color: #111;
    text-decoration: none;
}

.generic-button:hover, .button:hover {
    color: #fafafa;
}

.button-color-gold {
    background-color: #ffca18;
}

.button-color-red {
    background-color: #D80000;
}

.movie-font {
    font-weight: 500;
}

.unselected-text {
    color: #333333;
}

#user-review-accordion .generic-button {
    height: 80px;
    width: 100%;
}

.text-button-container, .buttons-container {
    display:flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    text-align: center;
}

.text-button-container {
    margin: 0.5rem 0;
}

.text-button-container p {
    margin-bottom: 0;
}

.justify-right {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

@media (min-width: 350px) {
    #user-review-accordion .generic-button {
        height: 40px;
        width: 180px;
    }
}

@media (min-width: 576px) {
    .justify-right {
        justify-content: flex-end;
    }
}

/*  Navbar */

.navbar {
    border-bottom: 5px solid #ffca18;
}

.navbar-brand,
.navbar-dark .navbar-nav .nav-link {
    color: #FAFAFA;
    transition: 0.25s;
}

.navbar-brand {
    font-size: 2rem;
    padding: 0.25rem 1rem 0 1rem;
    margin-left: 1rem;
}

.navbar-dark .navbar-brand:hover,
.navbar-dark .navbar-nav .nav-link:hover,
.sidenav a:hover,
.sidenav .closebtn:hover,
.socials i:hover,
.logo:hover,
.back-to-top-button:hover {
    color: #ffca18;
    cursor: pointer;
}

.bg-dark {
    background-color: #111 !important;
}

.navbar-buttons {
    margin-right: 1rem;
    justify-content: end !important;
}

.navbar-button {
    width: 100px;
    height: 40px;
    background-color: #ffca18;
    border: 2px solid #ffca18;
    color: #000;
    font-weight: 600;
    margin: .125rem 0.25rem 0;
    padding: .375rem .25rem;
    border-radius: .25rem;
    text-decoration: none;
    transition: 0.25s;
}

.navbar-button i {
    margin-right: 5px;
}

.navbar-button:hover {
    color: #c4c4c4;
    background-color: transparent;
}

.navbar-toggler {
    margin-right: 2rem;
}

.navbar-nav .dropdown-menu {
    margin-top: 19px;
    background-color: rgba(0, 0, 0, 0.75);
    border: 2px solid #111;
    text-align: center;
}

.navbar-nav .dropdown-menu .nav-link {
    padding: 5px 0;
}

.navbar-nav .dropdown-menu[data-bs-popper] {
    left: -58%;
}


/* Side Bar */

.sidenav {
    height: 100%;
    width: 0px;
    position: fixed;
    z-index: 1050;
    top: 0;
    right: 0;
    background-color: #111;
    border-left: 0px solid #ffca18;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
}

.content-cover {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1045;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.4);
    overflow-y: auto;
    overflow-x: hidden;
    text-align: center;
    opacity: 0;
    transition: opacity 1s;
}

.side-nav-hr,
.form-card hr,
.reviews-container hr {
    height: 5px !important;
    border: none;
    background-color: #ffca18;
    margin: 20px 32px;
    border-radius: 50px;
    width: 75%;
    opacity: 1;
    max-width: 250px;
}

.sidenav>ul>.nav-item>a {
    width: 220px;
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 1.25rem;
    color: #fafafa;
    display: block;
    transition: 0.3s;
}

.sidenav>ul>li>.sidenav-button {
    padding: 0;
    margin: 8px 8px 8px 32px;
}

.sidenav button {
    margin: 8px 8px 8px 32px;
}


.sidenav .closebtn {
    position: absolute;
    top: 0;
    margin: 0;
    right: 25px;
    font-size: 4rem;
    border: none;
    background-color: transparent;
    color: #fafafa;
}


@media (max-width: 320px) {
    .sidenav {
        padding-top: 15px;
    }

    .sidenav a {
        font-size: 18px;
    }

    .navbar-brand {
        margin: 0;
    }

    .navbar-toggler {
        margin-right: 0.5rem;
    }
}

/* base.html .content */

.navbar-dark .navbar-toggler {
    border: 3px solid #ffca1899;
}

.content {
    min-height: calc(100vh - 237px);
}

#header-image {
    height: 160px;
    width: 100%;
    object-fit: cover;
    object-position: center;
    position: absolute;
    background-color: #ffca18;
}

#header-title {
    height: 160px;
    width: 100%;
    color: #fafafa;
    font-size: 4rem;
    text-align: center;
    position: relative;
    padding: 50px 0 34px;
    margin-bottom: 0;
    background-color: rgba(0, 0, 0, .25);
}

@media (min-width: 768px) {
    .content {
        min-height: calc(100vh - 135px);
    }
}

@media (max-width: 320px) {
    .sidenav {
        padding-top: 15px;
    }

    .sidenav a {
        font-size: 18px;
    }

    .navbar-brand {
        margin: 0;
    }

    .navbar-toggler {
        margin-right: 0.5rem;
    }
}

/* Footer */

footer {
    background-color: #111;
    color: #fafafa;
    border-top: 5px solid #ffca18;
    margin-top: 2.5rem;
}

.socials {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.socials i,
.back-to-top-button,
.logo {
    text-decoration: none;
    color: #fafafa;
    transition: 0.3s;
    font-size: 1.3rem;
    margin: 10px 5px;
    padding: 3px;
}

footer .logo {
    font-size: 2rem;
    margin: 1px 5px;
}

/* Genre Management */

.search-bar-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}
/* ... */

